add-initial-testing-config

--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,9 @@ name = "pypi"
 django = "*"
 python-dotenv = "*"
 faker = "*"
-factory-boy = "*"
 pytest-django = "*"
 coverage = "*"
+pytest-factoryboy = "*"
 
 [dev-packages]
 
